added various picturex on admin screens

--- a/admin_index.html
+++ b/admin_index.html
@@ -122,7 +122,7 @@
         <div class="product-grid">
             <div class="product-item">
                 <a  class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
+                    <img src="images/budna_1.jpg.webp" alt="tricko">
                     <div class="product-name">Bunda_1</div>
                     <div class="price">100$</div>
                 </a>
@@ -136,7 +136,7 @@
 
             <div class="product-item">
                 <a  class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
+                    <img src="images/nohavice_1.webp" alt="tricko">
                     <div class="product-name">Nohavice_1</div>
                     <div class="price">100$</div>
                 </a>
@@ -164,7 +164,7 @@
 
             <div class="product-item">
                 <a  class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
+                    <img src="images/bunda_2.webp" alt="tricko">
                     <div class="product-name">Bunda_2</div>
                     <div class="price">100$</div>
                 </a>
@@ -184,8 +184,8 @@
             <div class="product-grid">
                 <div class="product-item">
                     <a class="product-link">
-                        <img src="images/tricko.jpg" alt="tricko">
-                        <div class="product-name">Bunda_1</div>
+                        <img src="images/hodinky_1.webp" alt="tricko">
+                        <div class="product-name">Hodinky_1</div>
                         <div class="price">100$</div>
                     </a>
                     <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
@@ -198,8 +198,8 @@
 
                 <div class="product-item">
                     <a class="product-link">
-                        <img src="images/tricko.jpg" alt="tricko">
-                        <div class="product-name">Nohavice_1</div>
+                        <img src="images/kosela_1.webp" alt="tricko">
+                        <div class="product-name">Kosela_1</div>
                         <div class="price">100$</div>
                     </a>
                     <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
@@ -212,8 +212,8 @@
 
                 <div class="product-item">
                     <a class="product-link">
-                        <img src="images/tricko.jpg" alt="tricko">
-                        <div class="product-name">Tricko_1</div>
+                        <img src="images/mikina_1.webp" alt="tricko">
+                        <div class="product-name">Mikina_1</div>
                         <div class="price">100$</div>
                     </a>
                     <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
@@ -226,8 +226,8 @@
 
                 <div class="product-item">
                     <a class="product-link">
-                        <img src="images/tricko.jpg" alt="tricko">
-                        <div class="product-name">Bunda_2</div>
+                        <img src="images/nohavice_2.webp" alt="tricko">
+                        <div class="product-name">Nohavice_2</div>
                         <div class="price">100$</div>
                     </a>
                     <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
