--- a/admin_products_view.html
+++ b/admin_products_view.html
@@ -161,6 +161,22 @@
             <div class="product-item">
                 <a href="#" class="product-link">
                     <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name"><span>Tricko_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
+
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+
+            <div class="product-item">
+                <a href="#" class="product-link">
+                    <img src="images/nohavice_1.webp" alt="tricko">
                     <div class="product-name"><span>Nohavice_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
@@ -176,8 +192,8 @@
 
             <div class="product-item">
                 <a href="#" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/nohavice_2.webp" alt="tricko">
+                    <div class="product-name"><span>Nohavice_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
@@ -192,8 +208,23 @@
 
             <div class="product-item">
                 <a href="#" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/kosela_1.webp" alt="tricko">
+                    <div class="product-name"><span>Kosela_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
+
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+            <div class="product-item">
+                <a href="#" class="product-link">
+                    <img src="images/kosela_2.webp" alt="tricko">
+                    <div class="product-name"><span>Kosela_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
@@ -208,8 +239,8 @@
 
             <div class="product-item">
                 <a href="#" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/topanky_1.webp" alt="tricko">
+                    <div class="product-name"><span>Topanky_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
@@ -223,39 +254,8 @@
 
             <div class="product-item">
                 <a href="#" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-
-                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
-                    <img src="images/edit.png" alt="edit">
-                </button>
-                <button class="admin-product-delete" aria-label="Delete product">
-                    <img src="images/delete.png" alt="delete">
-                </button>
-            </div>
-
-
-            <div class="product-item">
-                <a href="#" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-
-                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
-                    <img src="images/edit.png" alt="edit">
-                </button>
-                <button class="admin-product-delete" aria-label="Delete product">
-                    <img src="images/delete.png" alt="delete">
-                </button>
-            </div>
-
-            <div class="product-item">
-                <a href="#" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/topanky_2.webp" alt="tricko">
+                    <div class="product-name"><span>Topanky_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
