--- a/admin_edit_product_detail.html
+++ b/admin_edit_product_detail.html
@@ -106,16 +106,16 @@
 <div class="container">
     <div class="product-images-grid" >
         <div class="product-image-div">
-            <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="add_new" class="product-image">
+            <img src="images/nohavice_1.webp" data-src="images/tricko.jpg" alt="tricko" class="product-image">
         </div>
         <div class="product-image-div">
-            <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="add_new" class="product-image">
+            <img src="images/nohavice_1_2.webp" data-src="images/nohavice_1_2.webp" alt="tricko" class="product-image">
         </div>
         <div class="product-image-div">
-            <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="add_new" class="product-image">
+            <img src="images/nohavice_1_3.webp" data-src="images/nohavice_1_3.webp" alt="tricko" class="product-image">
         </div>
         <div class="product-image-div">
-            <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="add_new" class="product-image">
+            <img src="images/nohavice_1_4.webp" data-src="images/nohavice_1_4.webp" alt="tricko" class="product-image">
         </div>
     </div>
 
