changed pictures to clothes only

--- a/admin_index.html
+++ b/admin_index.html
@@ -184,8 +184,8 @@
             <div class="product-grid">
                 <div class="product-item">
                     <a class="product-link">
-                        <img src="images/hodinky_1.webp" alt="tricko">
-                        <div class="product-name">Hodinky_1</div>
+                        <img src="images/tricko_2.webp" alt="tricko">
+                        <div class="product-name">Tricko_2</div>
                         <div class="price">100$</div>
                     </a>
                     <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
