--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     <section>
         <div class="product-grid">
             <a href="product-detail.html" class="product-item">
-                <img src="images/hodinky_1.webp" alt="tricko">
-                <div class="product-name">Hodinky_1</div>
+                <img src="images/tricko_2.webp" alt="tricko">
+                <div class="product-name">Tricko_2</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
@@ -198,8 +198,8 @@
         </div>
         <div class="product-grid">
             <a href="product-detail.html" class="product-item">
-                <img src="images/topanky_1.webp" alt="tricko">
-                <div class="product-name">Topanky_1</div>
+                <img src="images/tricko_3.webp" alt="tricko">
+                <div class="product-name">Tricko_3</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
@@ -208,13 +208,13 @@
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/topanky_2.webp" alt="tricko">
-                <div class="product-name">Topanky_2</div>
+                <img src="images/mikina_2.webp" alt="tricko">
+                <div class="product-name">Mikina_2</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/topanky_3.webp" alt="tricko">
-                <div class="product-name">Topanky_3</div>
+                <img src="images/Nohavice_3.webp" alt="tricko">
+                <div class="product-name">Nohavice_3</div>
                 <div class="price">100$</div>
             </a>
         </div>
