--- a/admin_products_view.html
+++ b/admin_products_view.html
@@ -239,8 +239,8 @@
 
             <div class="product-item">
                 <a href="#" class="product-link">
-                    <img src="images/topanky_1.webp" alt="tricko">
-                    <div class="product-name"><span>Topanky_1</span></div>
+                    <img src="images/nohavice_3.webp" alt="tricko">
+                    <div class="product-name"><span>Nohavice_3</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
@@ -254,8 +254,8 @@
 
             <div class="product-item">
                 <a href="#" class="product-link">
-                    <img src="images/topanky_2.webp" alt="tricko">
-                    <div class="product-name"><span>Topanky_2</span></div>
+                    <img src="images/mikina_2.webp" alt="tricko">
+                    <div class="product-name"><span>Mikina_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
