--- a/products-view.html
+++ b/products-view.html
@@ -222,24 +222,24 @@
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/topanky_1.webp" alt="tricko">
-                    <div class="product-name"><span>Topanky_1</span></div>
+                    <img src="images/tricko_2.webp" alt="tricko">
+                    <div class="product-name"><span>Tricko_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/topanky_2.webp" alt="tricko">
-                    <div class="product-name"><span>Topanky_2</span></div>
+                    <img src="images/mikina_2.webp" alt="tricko">
+                    <div class="product-name"><span>Mikina_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/topanky_3.webp" alt="tricko">
-                    <div class="product-name"><span>Topanky_3</span></div>
+                    <img src="images/nohavice_3.webp" alt="tricko">
+                    <div class="product-name"><span>Nohavice_3</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
