--- a/admin_add_product_detail.html
+++ b/admin_add_product_detail.html
@@ -103,7 +103,7 @@
 
 
 
-<div class="container">
+<main class="container">
     <div class="product-images-grid" >
         <div class="product-image-div">
             <img src="images/add_new.svg" data-src="images/add_new.jpg" alt="add_new" class="product-image">
@@ -182,7 +182,7 @@
             <button class="add-to-store" onclick="window.location.href='admin_index.html'">Pridať</button>
     </div>
 
-</div>
+</main>
 
 
 
